--- a/work1.html
+++ b/work1.html
@@ -47,8 +47,11 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank">Uwase.M.Belyse</a> and is
+          <a href="https://github.com/mahoro-belyse/work " target="_blank">
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
