github and hosting project

--- a/work1.html
+++ b/work1.html
@@ -47,7 +47,10 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Uwase.M.Belyse</a> and is
+          <a href="https://github.com/mahoro-belyse" target="_blank"
+            >Uwase.M.Belyse</a
+          >
+          and is
           <a href="https://github.com/mahoro-belyse/work " target="_blank">
             on GitHub</a
           >
