--- a/work1.html
+++ b/work1.html
@@ -55,7 +55,7 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
